--- a/TTC_Bus_Delay_Slides.qmd
+++ b/TTC_Bus_Delay_Slides.qmd
@@ -103,9 +103,16 @@ format: revealjs
 
 
 ## Model
-- **Model Scores** 
 - **Hyperparameter Tuning**
-- **Cross Validation**
+    + **C : 0.1**
+- **Model Scores** 
+    + **Test Accuracy : 68.32%**
+    + **Training Accuracy: 71.63%**
+    + **Cross Validation Accuracy: 69.53%**
+
+
+## Confusion Matrix
+![](results/images/ConfusionMat.png){fig-align="center"}
 
 ## Conclusion
 - **Interpretation**
@@ -114,6 +121,10 @@ format: revealjs
 ## Interpretation
 - **Comparison of Actual vs Prediction**
 - **Exlpanation of Results**
+
+## Comparison of Actual vs Predictions
+
+![](results/images/PredictedVsActual.png){fig-align="center"}
 
 ## Future Scope
 - **Improve Prediction of Long Delays**
